--- a/ChangeLog
+++ b/ChangeLog
@@ -10,6 +10,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * przej¶cie na sygna³y w obs³udze menu g³ównego i podrêcznego.
   pozbycie siê wielkiej brzydkiej funkcji Kadu::commandParser (pawel_p/adrian)
 * konfiguracja pozosta³ej klawiszologii Kadu (pawel_p/adrian)
+* poprawki w kadu/Makefile.am i systemie paczkuj±cym dla Debiana
+  i wywalenie plików message.* (mast3r)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
