--- a/ChangeLog
+++ b/ChangeLog
@@ -12,6 +12,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * konfiguracja pozosta³ej klawiszologii Kadu (pawel_p/adrian)
 * poprawki w kadu/Makefile.am i systemie paczkuj±cym dla Debiana
   i wywalenie plików message.* (mast3r)
+* poprawka segfault w opcji wysy³aniu pliku je¶li ¿aden kontakt
+  nie jest zaznaczony, np. po starcie kadu (hutta/adrian)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
