getMyIP() zbedne. dziala mechanizm systemowy przydzialu gniazdek dcc wykorzystywany w libgadu (wczesniej tez dzialal tyle, ze nie ustawialem gg_dcc_ip na 255.255.255.255)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1260 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * obs³uga zmian statusów zgodna z GG6 (chilek)
 * poprawne wy¶wietlanie wersji protoko³u, ip u¿ytkownika
   i jego portu (chilek)
+* getMyIP() zbêdne. dzia³a mechanizm systemowy przydzia³u gniazdek dcc
+  wykorzystywany w libgadu (wcze¶niej te¿ dzia³a³ tyle, ¿e nie ustawia³em 
+  gg_dcc_ip na 255.255.255.255) (chilek)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
