kadu nie powinno sie wywalac jak otrzymamy wiadomosc graficzna; poki co obrazek jest ignorowany
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1264 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -25,6 +25,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka wy¶wietlania roku urodzenia w danych osobistych (pawel_p/mast3r)
 * poprawka wy¶wietlania opisu z spacjami w tipach userboxu i panelu
   informacyjnego (mast3r)
+* kadu nie powinno siê wywalaæ jak otrzymamy wiadomo¶æ graficzn±;
+  póki co obrazek jest ignorowany (chilek)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
