eksport/import listy uzytkownikow zgodny z GG6
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1266 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   informacyjnego (mast3r)
 * kadu nie powinno siê wywalaæ jak otrzymamy wiadomo¶æ graficzn±;
   póki co obrazek jest ignorowany (chilek)
+* eksport/import listy u¿ytkowników zgodny z GG6 (chilek)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
