--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * eksport/import listy u¿ytkowników zgodny z GG6 (chilek)
 * libgadu z dnia 12.09.2003; poprawionych kilka bugów przy imporcie i
   eksporcie listy u¿ytkowników (chilek)
+* okna wyszukiwania u¿ytkowników i danych osobistych u¿ywaj± sygna³u generowanego
+  przez event_managera (chilek)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
