wielo-spacje w oknie rozmowy
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1271 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * okna wyszukiwania u¿ytkowników i danych osobistych u¿ywaj± sygna³u generowanego
   przez event_managera (chilek)
 * malutka optymalizacja i wywalenie juz niepotrzebnego debuga w parserze (mast3r)
+* w oknie rozmowy kadu nie ucina spacji sprzed tekstu (mast3r)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
