--- a/ChangeLog
+++ b/ChangeLog
@@ -34,6 +34,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   przez event_managera (chilek)
 * malutka optymalizacja i wywalenie juz niepotrzebnego debuga w parserze (mast3r)
 * w oknie rozmowy kadu nie ucina spacji sprzed tekstu (mast3r)
+* potwierdzanie wiadomo¶ci dzia³a na slotach (chilek)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
