poprawka drobnego buga w libgadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1274 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -35,6 +35,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * malutka optymalizacja i wywalenie juz niepotrzebnego debuga w parserze (mast3r)
 * w oknie rozmowy kadu nie ucina spacji sprzed tekstu (mast3r)
 * potwierdzanie wiadomo¶ci dzia³a na slotach (chilek)
+* poprawka drobnego buga w libgadu (chilek)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
