--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * w oknie rozmowy kadu nie ucina spacji sprzed tekstu (mast3r)
 * potwierdzanie wiadomo¶ci dzia³a na slotach (chilek)
 * poprawka drobnego buga w libgadu (chilek)
+* poprawka z dzieleniem wiadomo¶ci w oknie rozmowy, przez co kadu znowu
+  ucina spacje w oknie rozmowy - to samo tyczy sie panelu informacyjnego (mast3r)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
