--- a/ChangeLog
+++ b/ChangeLog
@@ -38,6 +38,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka drobnego buga w libgadu (chilek)
 * poprawka z dzieleniem wiadomo¶ci w oknie rozmowy, przez co kadu znowu
   ucina spacje w oknie rozmowy - to samo tyczy sie panelu informacyjnego (mast3r)
+* obs³uga importu d³ugich list kontaktu (chilek)
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
