disabled na readonly w oknie informacji o uzytkowniku
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1279 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -39,6 +39,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawka z dzieleniem wiadomo¶ci w oknie rozmowy, przez co kadu znowu
   ucina spacje w oknie rozmowy - to samo tyczy sie panelu informacyjnego (mast3r)
 * obs³uga importu d³ugich list kontaktu (chilek)
+* pola w oknie informacji o kontakcie s± znowu tylko do odczytu, a nie disabled (mast3r)
+
 
 +++ wersja 0.3.4-rc4
 * kadu nie pokazuje fa³szywych statusów ukrytych w userboksie (chilek)
