--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@ podes³a³ patcha, a zrobi³ to kto¶ oznaczony przez y. Je¶li jest
 w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 
 +++ wersja 0.3.5-cvs
+* dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
+  kilku zak³adek (pawel_p/adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
