--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 +++ wersja 0.3.5-cvs
 * dalsza czê¶æ przeróbek mechanizmu konfiguracji. brakuje jeszcze
   kilku zak³adek (pawel_p/adrian)
+* drobne porz±dki w oknie konfiguracji - nowa zak³adka SMS,
+  zlikwidowana zak³adka Inne (adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
