--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   kilku zak³adek (pawel_p/adrian)
 * drobne porz±dki w oknie konfiguracji - nowa zak³adka SMS,
   zlikwidowana zak³adka Inne (adrian)
+* zmiana internacjonalizacji z gettext na zgodn± z Qt (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
