przejscie na translacje qt
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1303 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * drobne porz±dki w oknie konfiguracji - nowa zak³adka SMS,
   zlikwidowana zak³adka Inne (adrian)
 * zmiana internacjonalizacji z gettext na zgodn± z Qt (chilek)
+* configure: zmiana z gettext na internacjonalizacjê z QT (adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
