--- a/AUTHORS
+++ b/AUTHORS
@@ -3,16 +3,16 @@
 ===========================================================
 
 Tomasz Chiliñski <chilek (at) chilan (dot) com>
-programista, opiekun serwera kadu.net
+programista, opiekun serwera kadu.net, koordynator
 
 Adrian Smarzewski <adrian (at) kadu (dot) net>
-programista, twórca wersji polskiej
+programista, koordynator
 
 Dariusz Jagodzik <mast3r (at) kadu (dot) net>
 programista
 
 Roman Krzystyniak <Ron_K (at) tlen (dot) pl>
-dokumentacja projektu, aktualizacja wersji polskiej
+dokumentacja projektu, opiekun wersji polskiej
 
 
  Autorzy Kadu - ludzie nie wspieraj±cy ju¿ aktywnie projektu
