QT intrnacio it
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1310 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmiana internacjonalizacji z gettext na zgodn± z Qt (chilek)
 * configure: zmiana z gettext na internacjonalizacjê z QT (adrian)
 * dostêpno¶æ w hincie wy¶wietla siê w jêzyku ojczystym (chilek)
+* Qt internationale kadu_it.ts (Ron_K)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
