- nie pojawiaja sie okna bledu transmisji DCC, gdy tranmisja pliku nie zaczela sie, - tworzenie nowego uzytkownika po polsku.
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1314 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * dostêpno¶æ w hincie wy¶wietla siê w jêzyku ojczystym (chilek)
 * Qt internationale kadu_it.ts (Ron_K)
 * przebudowane dodawanie kontaktów (jest case insensitive) (chilek)
+* nie pojawiaj± siê okna b³êdu transmisji DCC, gdy tranmisja pliku nie
+  zaczê³a siê (chilek)
+* tworzenie nowego u¿ytkownika po polsku (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
