poprawione hashowanie hasla - tymczasowo rozszyfrowane haslo pojawia sie na konsoli
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1321 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -16,6 +16,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * nie pojawiaj± siê okna b³êdu transmisji DCC, gdy tranmisja pliku nie
   zaczê³a siê (chilek)
 * tworzenie nowego u¿ytkownika po polsku (chilek)
+* poprawione hashowanie has³a - tymczasowo rozszyfrowane has³o
+  pojawia siê na konsoli (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
