poprawiony bug przy dodawaniu uzytkownika, ktory juz do nas odezwal sie
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1324 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -18,7 +18,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * tworzenie nowego u¿ytkownika po polsku (chilek)
 * poprawione hashowanie has³a - tymczasowo rozszyfrowane has³o
   pojawia siê na konsoli (chilek)
-
+* poprawiony bug przy dodawaniu u¿ytkownika, który ju¿ do nas odezwa³
+  siê (ReGiS/chilek)
+  
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
   (klasa HtmlDocument) i wy³awiania emotów i url-i. Naprawione
