--- a/ChangeLog
+++ b/ChangeLog
@@ -20,6 +20,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   pojawia siê na konsoli (chilek)
 * poprawiony bug przy dodawaniu u¿ytkownika, który ju¿ do nas odezwa³
   siê (ReGiS/chilek)
+* kolejna przebudowa mechanizmu konfiguracji + zakladka z ustawieniami
+  dzwieku (pawel_p/adrian)
   
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
