wreszcie nowe hinty
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1332 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -22,6 +22,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   siê (ReGiS/chilek)
 * kolejna przebudowa mechanizmu konfiguracji + zakladka z ustawieniami
   dzwieku (pawel_p/adrian)
+* nowe hinty druga wersja.. dok³adnie nie testowane, ale powinny dzialaæ
+  wymagaj± jeszcze optymalizacji. Nowa zak³adka.. stara konfiguracja nie jest
+  kompatybilna z now±(zadzia³aj± ustawienia domy¶lne, które to mog± ulec
+  zmianie jak i inne nazwy zmiennych w pliku konfiguracyjnym) trzeba jeszcze
+  zrobiæ porz±dki w konfiguracji, wywaliæ nieaktualne kontrolki (mast3r)
   
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
