--- a/ChangeLog
+++ b/ChangeLog
@@ -31,6 +31,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   w dialogu danych osobistych pozostaje puste (chilek)
 * okno userinfo: nie informujemy serwera GG o zmianach w informacji o
   kontakcie, je¶li nie ma takiej potrzeby (chilek)
+* w konstruktorze kopiuj±cym UserList nie by³y uaktualniane pola Parent
+  w UserListElementach (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
