--- a/ChangeLog
+++ b/ChangeLog
@@ -33,6 +33,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   kontakcie, je¶li nie ma takiej potrzeby (chilek)
 * w konstruktorze kopiuj±cym UserList nie by³y uaktualniane pola Parent
   w UserListElementach (chilek)
+* Hinty: <, > i & s± wy¶wietlane poprawnie w cytowanej wiadomo¶ci (mast3r)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
