--- a/ChangeLog
+++ b/ChangeLog
@@ -36,6 +36,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * Hinty: <, > i & s± wy¶wietlane poprawnie w cytowanej wiadomo¶ci (mast3r)
 * Hinty: poprawienie angielskiego w konfiguracji+ma³a przebudowa (mast3r)
 * Hinty: zmiana domy¶lnej warto¶ci cytownych znaków na 50 (mast3r)
+* Hinty: mozliwo¶æ przet³umaczenia opcji w zak³adce Hintów(dymków) (mast3r)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
