--- a/ChangeLog
+++ b/ChangeLog
@@ -37,6 +37,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * Hinty: poprawienie angielskiego w konfiguracji+ma³a przebudowa (mast3r)
 * Hinty: zmiana domy¶lnej warto¶ci cytownych znaków na 50 (mast3r)
 * Hinty: mozliwo¶æ przet³umaczenia opcji w zak³adce Hintów(dymków) (mast3r)
+* Hinty: poprawka - w³asna s³adnia jest teraz zawsze u¿ywana
+  gdy jest w³±czona nie tylko gdy status jest z opisem (mast3r) 
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
