rejestracja i zmiana hasla zgodne z GG6
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1359 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -42,6 +42,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * Hinty: przy zmianie statusu powinno dzia³aæ ju¿ t³umaczenie, ma³a
   przeróbka estetyczna w zak³adce konfiguracji (mast3r) 
 * libgadu z 02.10.2003 (chilek)
+* rejestracja zgodna z GG6 (chilek)
+* zmiana has³a zgodna z GG6 (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
