udoskonalenie dialogow rejestracji i zmiany hasla
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1361 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -44,6 +44,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu z 02.10.2003 (chilek)
 * rejestracja zgodna z GG6 (chilek)
 * zmiana has³a zgodna z GG6 (chilek)
+* udoskonalenie dialogow rejestracji i zmiany hasla (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
