wyrejestrowywanie zgodne z GG6
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1368 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -45,6 +45,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * zmiana has³a zgodna z GG6 (chilek)
 * udoskonalenie dialogow rejestracji i zmiany hasla (chilek)
 * libgadu z 03.10.2003 (chilek)
+* wyrejestrowywanie zgodne z GG6 (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
