--- a/ChangeLog
+++ b/ChangeLog
@@ -46,6 +46,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * udoskonalenie dialogow rejestracji i zmiany hasla (chilek)
 * libgadu z 03.10.2003 (chilek)
 * wyrejestrowywanie zgodne z GG6 (chilek)
+* usuniêty segfault przy imporcie pustej listy kontaktów (pawel_p/chilek)
+* dostosowanie importu listy kontaktów do nowego libgadu (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
