poprawka libgadu zwiazana z eksportem duzej listy kontaktow
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1371 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -48,6 +48,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wyrejestrowywanie zgodne z GG6 (chilek)
 * usuniêty segfault przy imporcie pustej listy kontaktów (pawel_p/chilek)
 * dostosowanie importu listy kontaktów do nowego libgadu (chilek)
+* poprawka libgadu zwi±zana z eksportem du¿ej listy kontaktów (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
