--- a/libgadu/ChangeLog
+++ b/libgadu/ChangeLog
@@ -4,6 +4,19 @@ oznacza, ¿e ,,nick'' jest pomys³odawc± lub podes³a³ patcha, a zrobi³
 to kto¶ oznaczony przez ,,x'' (w - wojtekka, s - speedy, a - arekm,
 d - drg, sz - szalik).
 
+// 2003-10-05
+
+- libgadu: poprawka wysy³ania listy kontaktów na serwer (Chilek/w)
+- libgadu: dostosowanie wysy³ania has³a do GG 6.0 now± funkcj±
+  gg_remind_passwd2() (Chilek/w)
+- libgadu: poprawka zmiany has³a (w)
+- libgadu: inteligentne potwierdzenie eksportu listy kontaktów (Chilek/w)
+
+// 2003-10-04
+
+- mo¿liwo¶æ wy³±czenia linkowania z libbind, mimo ¿e jest zainstalowane
+  (arekm/w)
+
 // 2003-10-03
 
 - libgadu: poprawka kodowania adresów e-mail w urlach (Chilek/w)
@@ -330,4 +343,4 @@ d - drg, sz - szalik).
 - poprawka zachowania trybu wielolinijkowego (theKnight/w)
 
 
-$Id: ChangeLog,v 1.24 2003/10/03 20:31:24 chilek Exp $
+$Id: ChangeLog,v 1.25 2003/10/05 22:12:57 chilek Exp $
