--- a/ChangeLog
+++ b/ChangeLog
@@ -44,12 +44,12 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * rejestracja zgodna z GG6 (chilek)
 * zmiana has³a zgodna z GG6 (chilek)
 * udoskonalenie dialogow rejestracji i zmiany hasla (chilek)
-* libgadu z 03.10.2003 (chilek)
 * wyrejestrowywanie zgodne z GG6 (chilek)
 * usuniêty segfault przy imporcie pustej listy kontaktów (pawel_p/chilek)
 * dostosowanie importu listy kontaktów do nowego libgadu (chilek)
-* poprawka libgadu zwi±zana z eksportem du¿ej listy kontaktów (chilek)
 * wydzielenie dialogu pobrania tokena (chilek)
+* libgadu z 05.10.2003 (chilek)
+* przypomnienie has³a zgodne z GG6 (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
