Omija blad linkowania libgadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1380 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -50,6 +50,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wydzielenie dialogu pobrania tokena (chilek)
 * libgadu z 05.10.2003 (chilek)
 * przypomnienie has³a zgodne z GG6 (chilek)
+* skrypt Instaluj instaluje najpierw Libgadu a potem Kadu - ominienty blad linkowania (Ron_K)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
