malutka poprawka i dodanie informacji o błędach polaczeń i złym hasle
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1382 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -51,6 +51,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu z 05.10.2003 (chilek)
 * przypomnienie has³a zgodne z GG6 (chilek)
 * skrypt Instaluj instaluje najpierw Libgadu a potem Kadu - ominienty blad linkowania (Ron_K)
+* wiêcej informacji o b³êdach przy ³±czeniu siê z serwerem, informacja o
+  niepoprawnym hasle i poprawka przy DISCONNECT - by³y wywo³ywane
+  dwie funkcje zamiast jednej (mast3r)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
