--- a/ChangeLog
+++ b/ChangeLog
@@ -55,6 +55,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   niepoprawnym hasle i poprawka przy DISCONNECT - by³y wywo³ywane
   dwie funkcje zamiast jednej (mast3r)
 * znowu dobrze zapamiêtuje blokowanych itd. itp. (chilek)
+* poprawka libgadu - kadu nie wysypuje siê gdy próbujemy staæ siê niedostêpni
+  bêd±c jeszcze/ju¿ niedostêpnymi (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
