statyczne linkowanie z libgadu
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1398 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,5 +5,8 @@ kadu (<wersja>) unstable; urgency=low
   * 01.09.2003 - Poprawka, do paczki nie wchodzily ikonki, teraz juz jest OK.
   * 01.09.2003 - Poprawka, skrypt powinien juz reagowac na zmiany w pliku 
                  VERSION.
+  * 11.10.2003 - Paczka Kadu nie wymaga juz paczki libgadu poniewaz
+		 kadu linkuje sie statycznie z kompilowana bibliotek±
+		 libgadu w kadu.
 
  -- Dariusz Jagodzik <mast3r@kadu.net>  Tue, 25 Feb 2003 10:06:51 +0100
