--- a/ChangeLog
+++ b/ChangeLog
@@ -60,6 +60,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu z pakietu kadu linkowane jest statycznie. w razie czego pozosta³a
   opcja --with-existing-libgadu (adrian)
 * ma³e poprawki optymalizuj±ce do dymków (mast3r)
+* ma³a przeróbka - moze nie bêdzie siê teraz wywalaæ kadu (w szczególnych
+  wypadkach) przy znikaniu dymków.+Przygotowania do klikalno¶ci (mast3r)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
