--- a/ChangeLog
+++ b/ChangeLog
@@ -66,6 +66,9 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   dymku powoduje jego znikniêcie (mast3r)
 * poprawiony b³±d - dymki nie kompilowa³y siê na qt 3.0.x (mast3r)
 * rozmowy g³osowe - nowa dzia³aj±ca wersja! - faza alfa (chilek)
+* configure: wstêp do obs³ugi rozmów g³osowych, narazie opcja
+  jest na sta³e wy³±czona i kadu kompiluje siê poprawnie bez
+  libgsm i rozmów g³osowych (adrian) 
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
