okno potwierdzania nadchodzcej rozmowy glosowej
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1427 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -69,6 +69,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * configure: wstêp do obs³ugi rozmów g³osowych, narazie opcja
   jest na sta³e wy³±czona i kadu kompiluje siê poprawnie bez
   libgsm i rozmów g³osowych (adrian) 
+* okno potwierdzania nadchodz±cej rozmowy g³osowej (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
