kolejny patch pawla_p - co zle to nie ja ;)
git-svn-id: svn+ssh://kadu.net/home/kadu/repos/kadu/trunk@1438 fea5205d-6df5-0310-bef7-ea67e47da9a5

--- a/ChangeLog
+++ b/ChangeLog
@@ -71,6 +71,8 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   libgsm i rozmów g³osowych (adrian) 
 * okno potwierdzania nadchodz±cej rozmowy g³osowej (chilek)
 * kadu wch³onê³o bibliotekê libgsm 1.0.10 ;) (adrian)
+* konfiguracja: zak³adki Chat i Notify wed³ug nowego mechanizmu.
+  Notify ju¿ jest, ale jeszcze nie dzia³a (pawel_p/adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
