--- a/ChangeLog
+++ b/ChangeLog
@@ -76,6 +76,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * configure: nowa opcja --enable-voice w³±czaj±ca eksperymentaln±
   obs³ugê rozmów g³osowych (adrian)
 * mo¿liwo¶æ przerwania rozmowy g³osowej (chilek)
+* poprawka wykrywania nag³ówków QT - katalog /usr/X11R6/include/qt (adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
