--- a/ChangeLog
+++ b/ChangeLog
@@ -77,6 +77,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
   obs³ugê rozmów g³osowych (adrian)
 * mo¿liwo¶æ przerwania rozmowy g³osowej (chilek)
 * poprawka wykrywania nag³ówków QT - katalog /usr/X11R6/include/qt (adrian)
+* wyeliminowane "pykniêcia" przy nadawaniu g³osu (chilek)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
