--- a/ChangeLog
+++ b/ChangeLog
@@ -79,6 +79,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * wyeliminowane "pykniêcia" przy nadawaniu g³osu (chilek)
 * poprawki poprawek pawla_p ;) (pawel_p/adrian)
 * libgadu z 16.10.2003 (chilek)
+* konfiguracja: logika zak³adki notify i drobne poprawki (pawel_p/adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
