--- a/ChangeLog
+++ b/ChangeLog
@@ -80,6 +80,7 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * poprawki poprawek pawla_p ;) (pawel_p/adrian)
 * libgadu z 16.10.2003 (chilek)
 * konfiguracja: logika zak³adki notify i drobne poprawki (pawel_p/adrian)
+* konfiguracja: optymalizacja i kolejne poprawki (pawel_p/adrian)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
