--- a/ChangeLog
+++ b/ChangeLog
@@ -81,6 +81,11 @@ w postaci (z) to zarówno pomys³ jak i wykonanie nale¿y do z.
 * libgadu z 16.10.2003 (chilek)
 * konfiguracja: logika zak³adki notify i drobne poprawki (pawel_p/adrian)
 * konfiguracja: optymalizacja i kolejne poprawki (pawel_p/adrian)
+* poprawki w kodzie dymków, powinno kompilowaæ sie na qt 3.0.x (mast3r)
+* porz±dki, podzia³ na sygna³y, narazie problemy z usuwaniem wszystkich
+  dymków(segfaultuje) (mast3r)
+* podswietlanie poszczególnych dymków - u³atwia usuwanie pojedynczych dymków (mast3r)
+* poprawka tlumaczeñ w zak³adce konfiguracji dymków (mast3r)
 
 +++ wersja 0.3.4
 * pocz±tki nowego formatu wewnêtrznego przechowywania wiadomo¶ci
